--- a/website/style.css
+++ b/website/style.css
@@ -62,7 +62,7 @@ header .textLogo {
 }
 
 .languageSelection {
-    display: flex; 
+    display: flex;
     gap: 5px;
     position: absolute;
     margin-left: -5px;
@@ -102,7 +102,7 @@ a.title {
     width: 30px;
     height: 30px;
     margin-left: auto;
-    background-color:var(--colorGreen2);
+    background-color: var(--colorGreen2);
     border: none;
     outline: 2px solid var(--colorLight);
     border-radius: 20%;
@@ -293,32 +293,69 @@ footer a {
     background-color: var(--colorLight);
 }
 
-.openingHoursTable td:first-of-type,
-.openingHoursTable th:first-of-type {
+.openingHoursTable th {
+    padding-left: 15%;
+}
+
+.openingHoursTable td:first-of-type {
     text-align: left;
 }
 
-.openingHoursTable td:nth-of-type(2),
-.openingHoursTable th:nth-of-type(2) {
+.openingHoursTable td:nth-of-type(2) {
     padding-left: 20px;
 }
 
-.textExtraSmall {font-size: 15px;}
-.textSmall {font-size: 18px;}
-.textMediumSmall{font-size: 22px;}
-.textMedium {font-size: 28px;}
-.textMediumLarge {font-size: 37px;}
-.textLarge {font-size: 45px;}
+.textExtraSmall {
+    font-size: 15px;
+}
 
-.fontBold {font-weight: bold;}
+.textSmall {
+    font-size: 18px;
+}
 
-.fontInter {font-family: Inter;}
-.fontProza {font-family: Proza;}
-.fontLabrada {font-family: Labrada;}
+.textMediumSmall {
+    font-size: 22px;
+}
 
-.textDark {color: var(--colorDark)}
-.textGreyish {color: var(--colorGrey)}
-.textLight {color: var(--colorLight)}
+.textMedium {
+    font-size: 28px;
+}
+
+.textMediumLarge {
+    font-size: 37px;
+}
+
+.textLarge {
+    font-size: 45px;
+}
+
+.fontBold {
+    font-weight: bold;
+}
+
+.fontInter {
+    font-family: Inter;
+}
+
+.fontProza {
+    font-family: Proza;
+}
+
+.fontLabrada {
+    font-family: Labrada;
+}
+
+.textDark {
+    color: var(--colorDark)
+}
+
+.textGreyish {
+    color: var(--colorGrey)
+}
+
+.textLight {
+    color: var(--colorLight)
+}
 
 .textLogo {
     color: var(--colorDarkGreen);
@@ -327,7 +364,6 @@ footer a {
 
 /* following is used at screen widths below 1400px */
 @media screen and (max-width: 1400px) {
-
     header .textLogo {
         display: none;
     }
@@ -352,7 +388,6 @@ footer a {
 
 /* following is used at screen widths below 910px */
 @media screen and (max-width: 910px) {
-    
     header {
         display: flex;
     }
@@ -366,7 +401,7 @@ footer a {
     .languageSelection img {
         width: 30px;
     }
-    
+
     .allServices {
         display: none;
     }
@@ -382,7 +417,6 @@ footer a {
 
 /* following is used at screen widths below 700px */
 @media screen and (max-width: 700px) {
-
     header {
         padding-bottom: 2%;
         border-radius: 0;
@@ -412,7 +446,6 @@ footer a {
 
 /* following is used at screen widths below 455px */
 @media screen and (max-width: 455px) {
-
     .dropDown {
         right: 20px;
     }
@@ -438,10 +471,27 @@ footer a {
         height: 20px;
     }
 
-    .textExtraSmall {font-size: clamp(0.6rem, 3vw, 4rem)}
-    .textSmall {font-size: clamp(0.7rem, 3.5vw, 4rem)}
-    .textMediumSmall {font-size: clamp(0.9rem, 3.9vw, 4rem)}
-    .textMedium {font-size: clamp(1.2rem, 6.1vw, 4rem)}
-    .textMediumLarge {font-size: clamp(1.7rem, 7.3vw, 4rem)}
-    .textLarge {font-size: clamp(1.7rem, 8.5vw, 4rem)}
+    .textExtraSmall {
+        font-size: clamp(0.6rem, 3vw, 4rem)
+    }
+
+    .textSmall {
+        font-size: clamp(0.7rem, 3.5vw, 4rem)
+    }
+
+    .textMediumSmall {
+        font-size: clamp(0.9rem, 3.9vw, 4rem)
+    }
+
+    .textMedium {
+        font-size: clamp(1.2rem, 6.1vw, 4rem)
+    }
+
+    .textMediumLarge {
+        font-size: clamp(1.7rem, 7.3vw, 4rem)
+    }
+
+    .textLarge {
+        font-size: clamp(1.7rem, 8.5vw, 4rem)
+    }
 }
