Made a noscript behavior
When javascript is disabled removes access to products, consultation and the flower_delivery service pages. Adds a message box that says that javascript is disabled and has contact information in it.

--- a/website/style.css
+++ b/website/style.css
@@ -28,6 +28,7 @@
     --colorDark: #272020;
     --colorGrey: #8C8C8C;
     --colorDarkGreen: #144723;
+    --colorDarkRed: #c00101;
 }
 
 a:hover {
@@ -169,6 +170,43 @@ main {
     padding-top: 110px;
 }
 
+.centerInfo {
+    display: flex;
+    flex-direction: column;
+    text-align: center;
+    margin-top: 5px;
+    margin-bottom: 20px;
+    justify-content: space-evenly;
+}
+
+.noscriptContainer {
+    display: flex;
+    flex-direction: column;
+    justify-content: space-around;
+    align-items: center;
+    padding: 20px;
+    border: #272020 2px solid;
+    margin: 10px 20px 20px 20px;
+    border-radius: 10px;
+}
+
+.noscriptMessage {
+    /* display: flex;
+    flex-direction: column; */
+    margin: 5px 0px;
+}
+
+.noscriptMessageWarning {
+    color: var(--colorDarkRed);
+    /* font-weight: bold; */
+}
+
+.welcomeMessage {
+    text-align: center;
+    margin-top: 5px;
+    margin-bottom: 20px;
+}
+
 .sortingOptions {
     display: flex;
     flex-wrap: wrap;
@@ -181,12 +219,6 @@ main {
 
 .vatCheckbox {
     scale: 1.6;
-}
-
-.welcomeMessage {
-    text-align: center;
-    margin-top: 5px;
-    margin-bottom: 20px;
 }
 
 .productsPage,
