Many small fixes
sek -> SEK
Added a space before currency in consultation
Removed unneeded code / commented code
Added transition to postcode check for user information

--- a/website/style.css
+++ b/website/style.css
@@ -241,6 +241,10 @@ main {
     align-items: center;
 }
 
+.postalCodeOutput {
+    transition-duration: 0.2s;
+}
+
 .service {
     width: 400px;
 }
