Added deal of the day
Added a discount that rotates depending on day of the week as well as tests for that discount

--- a/website/style.css
+++ b/website/style.css
@@ -338,6 +338,11 @@ main {
     gap: 5px;
 }
 
+.discounted {
+    text-decoration: line-through;
+    color: var(--colorGrey);
+}
+
 footer {
     display: flex;
     flex-wrap: wrap;
