--- a/backend/public/styles.css
+++ b/backend/public/styles.css
@@ -105,9 +105,10 @@ input::-webkit-inner-spin-button {
     border: 1px black solid;
     height: fit-content;
     padding: 10px;
+    overflow-x: auto;
 }
 
-.edit > form {
+.edit form {
     display: flex;
     flex-direction: column;
     border: 1px black solid;
@@ -116,6 +117,12 @@ input::-webkit-inner-spin-button {
 
 .productList {
     display: flex;
+    overflow-x: auto;
+}
+
+.postalCodeList {
+    display: flex;
+    overflow-x: auto;
 }
 
 .editProduct {
