--- a/backend/template/edit.ejs
+++ b/backend/template/edit.ejs
@@ -74,7 +74,7 @@
                             <label for="sunday">Söndag</label>
                         </div>
                     </div>
-                    <input type="number" class="discountPrice" placeholder="Nedsat Pris" name="discount_price"
+                    <input type="number" class="discountPrice" placeholder="Nedsatt Pris" name="discount_price"
                         value="<%= product.discount_price %>">
             </div>
             <input required type="text" placeholder="Produktnamn Eng" name="product_name_eng"
